# formula_one_elo

./: .pre-commit-config.yaml  Makefile  README.md  api_requester.py  elo_calc.py  main.py  pyproject.toml  requirements.txt
data/: active_drivers_2014.csv  active_drivers_2015.csv  active_drivers_2016.csv  active_drivers_2017.csv  active_drivers_2018.csv  active_drivers_2019.csv  active_drivers_2020.csv  active_drivers_2021.csv  active_drivers_2022.csv  active_drivers_2023.csv  active_drivers_2024.csv  active_drivers_2025.csv  active_drivers_2026.csv  driver_ids.csv  elo_ratings_over_time_2014.csv  elo_ratings_over_time_2015.csv  elo_ratings_over_time_2016.csv  elo_ratings_over_time_2017.csv  elo_ratings_over_time_2018.csv  elo_ratings_over_time_2019.csv  elo_ratings_over_time_2020.csv  elo_ratings_over_time_2021.csv  elo_ratings_over_time_2022.csv  elo_ratings_over_time_2023.csv  elo_ratings_over_time_2024.csv  elo_ratings_over_time_2025.csv  elo_ratings_over_time_2026.csv
elo_engine/: api_requester.py  elo_calc.py  stats_calc.py
